Update mini-profiler to filter requests by session (#5690)
- Add sessionId to mini-profiler RequestInfos
- Add mini-profiler actions to return session-filtered request perf data